compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__assert__bool_literal.snap
---
source: compiler-core/src_refactored/__core/type_/tests/assert.rs
assertion_line: 54
expression: "\npub fn main() {\n  assert True\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  assert True
}


----- WARNING
warning: Assertion of a literal value
  ┌─ /src/warning/wrn.gleam:3:10
  │
3 │   assert True
  │          ^^^^

Asserting on a literal bool is redundant since you can already tell whether
it will be `True` or `False`.
